--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
             }
 
         </style>
-        <title>Document</title>
+        <title>CRUD DB</title>
     </head>
     <body>
         <h1>PYTHON CRUD DATABASE</h1>
